--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -24,11 +24,19 @@ We investigate multiple different origins of this $k$ and $E$ dependent spin-spl
 	H_R(\mathbf{k}) = \alpha_R \frac{\mathbf{E}}{|\mathbf{E}|} \cdot (\mathbf{k} \times \hat{\mathbf{\sigma}}),
 \end{equation}
 where $\hat{\mathbf{\sigma}}$ is the electron spin operator, and $\mathbf{E}$ the electric field. It will turn out that multiple microscopic effects can lead to contributions of this form, some of these are well known, others are more obscure. The magnitude of the contribution depends on the microscopic origin, namely whether the effect is purely relativistic or rather a combination of relativistic and electrostatic. Certain materials showcase an exceedingly big splitting, for example in GeTe as can be seen in Fig.~\ref{fig:Rashba_intro_dispersion}, and will be used as the main example throughout this chapter.
+
+
 \begin{figure}[h]
-	\IncludeGraphics[width=0.5\linewidth]{intro_dispersion_svg.png}
+	\begin{subfigure}[b]{0.49\textwidth}
+	\caption{}
+	\IncludeGraphics{intro_dispersion_svg.png}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.49\textwidth}
+	\caption{}
+	\IncludeGraphics{cone.jpg}
+	\end{subfigure}
 	\caption{\label{fig:Rashba_intro_dispersion}
-		{\bf Large Rashba splitting in GeTe} The two graphs show the band dispersions for the first valence band for the non spin-orbit coupled (NSOC, blue), and spin-orbit coupled (SOC, red) case, around the high-symmetry $Z$ point of the Brillouin zone (see Fig.~\ref{fig:Rashba_BZBSDOS} for details). The $u-d$ and $u'-d'$ labels designate the up and down spin-polarized bands, where the prime signifies that the orientation of the spin axis depends on specific path followed in $k$-space. 
-	}
+		{\bf Large Rashba splitting} (a) The band dispersion of the first valence band in GeTe, around the $Z$-point of the Brillouin zone (see Fig.~\ref{fig:Rashba_BZBSDOS} for details). Two graphs show both non spin-orbit coupled (NSOC, blue), and spin-orbit coupled (SOC, red) case. The $u-d$ and $u'-d'$ labels designate the up and down spin-polarized bands, where the prime signifies that the orientation of the spin axis depends on specific path followed in $k$-space. b) Shifted parabolic energy leves due to Rashba splitting, and associated spin texture.}
 \end{figure}
 
 We hope that this will shed light on where these contributions come from and how they compare with eachother and how they ultimately lead to the observed spin-splitting.
