--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -9,7 +9,7 @@
 % \usepackage{smartdiagram}
 \usepackage{subcaption}
 % \usepackage[caption=false]{subfig}
-\captionsetup[subfigure]{labelformat=brace}
+\captionsetup[subfigure]{labelformat=brace,position=top,singlelinecheck=off,justification=raggedright}
 % \usepackage[normalem]{ulem}
 % \usepackage{tikz}
 \usepackage{bm}
