--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -116,7 +116,7 @@ with $\theta_z^n = -ae^{-\frac{1}{2}\left(\frac{a|\bm{n}|}{a_0}\right)^2}\frac{\
 Fig.~\ref{fig:overlapdip} shows pictorially how these terms arise from the electric dipoles between the shifted orbitals. 
 \begin{figure}[t]
 ~\centering
-\IncludeGraphics[width=\linewidth]{overlapdip.pdf}\caption{\label{fig:overlapdip} Overlap dipoles. (a) Dipole between $s$ and $p_z$, (b) Dipole between shifted $p$ orbitals, the dashed line signifies a unit cell boundary.}
+\IncludeGraphics[width=\linewidth]{overlapdip.png}\caption{\label{fig:overlapdip} {\bf Overlap dipoles.} (a) On-site dipole from $s$ and $p_z$ hybridization, (b) Dipole due to overlap of shifted $p$ orbitals, the dashed line signifies a unit cell boundary.}
 \end{figure}
 
 Solving the tight binding model for $k=0$, one can treat $\hat{H}_{isb}$ as a perturbation on $\hat{H}_0$ due to the smallness of $E_z$, leading to a hybridization between the $s$ and $p_z$ orbitals:
@@ -289,7 +289,7 @@ The last issue with the purely relativistic explanation, which has been confirme
 \section{Results and Discussion}
 The dispersion, OAM, and SAM of the first valence band are shown in the left panel of Fig.~\ref{fig:Rashba_oamvseigvalv}. Confirming our earlier conclusions, we can see that non-zero, linearly varying OAM is formed as we move away from the high-symmetry $Z$-point. Moreover, the OAM is perpendicular to both the $z$-axis and the $k$ vector, as it should be from Eq.~\ref{eq:oam_from_k}, and can also be seen from the panels in Fig. \ref{fig:Rashba_textures}. This leads e.g. to $l_y=0$ along the $A \to Z$ path, where only $k_y$ is nonzero. When atomic SOC is included in the orange and blue graphs, we see the spin-splitting that results from having the spin oriented either along or opposite to the already linearly varying OAM. The unquenching of the OAM at the $Z$-point when SOC is included is also clearly visible, together with the resulting change in the slope that originates from the corresponding contribution to the dipole moment Eq.~\ref{eq:d_z_from_OAM}. This correlation can also be observed in the panel showing the center of mass $\bar{z}=\int_{\textrm{supercell}}z |\psi(k)|^2$ of the Bloch-functions, which is proportional to the dipole moment around the same reference point.
 
-When we compare this first valence band with the third valence band, shown in the right panel of Fig.~\ref{fig:Rashba_oamvseigvalv}, we can clearly see the previously discussed issues with the purely relativistic explanation. As stated before, we can note that not only the magnitude but also the sign of the prefactor in Eq.~\ref{eq:Rashba_form} is opposite for these two bands, showcased by the size of the splitting, and by the ordering of the spin-up vs the spin-down splitted part. This is because the character of the first and third valence bands are different. The first valence band is mostly coming from Te $j=\frac{3}{2}$ orbitals, whereas the third valence band is predominantly $j=\frac{1}{2}$. This causes the orientation of the OAM and SAM to be along eachother in the first band, and opposite for the third, as shown in Fig.~\ref{fig:Rashba_textures}. This then leads to the different ordering of the spin-split bands.
+When we compare this first valence band with the third valence band, shown in the right panel of Fig.~\ref{fig:Rashba_oamvseigvalv}, we can clearly see the previously discussed issues with the purely relativistic explanation. As stated before, we can note that not only the magnitude but also the sign of the prefactor in Eq.~\ref{eq:Rashba_form} is opposite for these two bands, showcased by the size of the splitting, and by the ordering of the spin-up vs the spin-down splitted part. This is because the character of the first and third valence bands are different. The first valence band is mostly coming from Te $j_{\frac{3}{2}}$ orbitals, whereas the third valence band is predominantly $j_{\frac{1}{2}}$. This causes the orientation of the OAM and SAM to be along eachother in the first band, and opposite for the third, as shown in Fig.~\ref{fig:Rashba_textures}. This then leads to the different ordering of the spin-split bands.
 
 There is one last very interesting feature one can notice from Fig.~\ref{fig:Rashba_textures} (c) and (f), that is, the switching of the character (and SAM, OAM orientation) of the bands, very close to the $Z$ point. This is because the crystal field breaks rotationial symmetry causing the atomic $j$ to not be a conserved quantity, i.e. there is a mixing between different atomic $j$ orbitals, which varies strongly in this very narrow region around $Z$.
 
