additional images and updated introduction

--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -1,4 +1,4 @@
-\chapter{Coupling between spin and strain density waves}
+\chapter{Coupling between spin and strain density waves \label{ch:CrSDW}}
 \section{Introduction}
 In all previous chapeters, we discussed situations for which the order parameters were static, or at least at equilibrium.
 For GeTe, the polarization and resulting spin splitting was fixed. Even though it is interesting to study what the effect of changes to the polarization has to this splitting \cite{Monserrat2017}, even in that case, the electrons can be assumed to be in equilibrium with the changing potential at all times.
