--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -1,6 +1,6 @@
 \newcommand{\Jpar}{J_{||}}
 \newcommand{\Jperp}{J_{\perp}}
-\chapter{Magnetoelectric crankshaft: topologically protected switching in multiferroic GdMn$_2$O$_5$}
+\chapter{Magnetoelectric crankshaft: topologically protected switching in multiferroic GdMn$_2$O$_5$ \label{ch:GdMn2O5}}
 \section{Introduction}
 Efficient control and probing of robust order has historically been one of the main technological drivers for research in condensed matter.
 The hallmark example is the impact that the discovery of giant magnetoresistance has had on the efficiency of the readhead in hard disks.
