--- a/papers/Introduction/Introduction.tex
+++ b/papers/Introduction/Introduction.tex
@@ -1,30 +1,63 @@
 \chapter{Introduction}
-Theoretical condensed matter research is plagued by a fundamental issue of complexity. The sheer amount of degrees of freedom in a material of any technologically relevant scale is overwhelming (i.e. $\sim10^{23}$ electrons per cm$^3$), and make it impossible to describe the quantum mechanical wavefunction exactly \lp{there is some more nice things along this line in Wen}. This forces researchers in the field to make approximations, as to make the problem tractable, while still capturing the essential physics resulting in the effects under investigation.
-The way to make progress with this undertaking has always been to try and isolate the parts of the system that contribute the most. As is well known, every quantum mechanical system is governed fundamentally by its Hamiltonian. One could go so far as to say that if we would be able to exactly calculate all of its eigenvectors and eigenvalues, the field of consed matter would be completed. This is ofcourse impossible for reasons stated above.
+Theoretical condensed matter research is plagued by a fundamental issue of complexity. The sheer amount of degrees of freedom in a material of any technologically relevant scale is overwhelming (e.g. $\sim10^{23}$ electrons per cm$^3$), and make it impossible to describe the quantum mechanical wavefunction exactly \lp{there is some more nice things along this line in Wen}. This forces researchers in the field to make approximations, as to make the problem tractable, while still capturing the essential physics resulting in the effects under investigation.
+The way to make progress with this undertaking has always been to try and isolate the parts of the system that play the biggest role in the effects under investigation, while neglecting those that only lead to more complexity.
 
-The full Hamiltonian can be decomposed into several contributions, which allows one to focus on the most important contributions, while discarding the rest. For example, the elastic energy scales needed to completely break a material, while important for mechanical studies, are so much larger than those governing the movement of electrons through the material, that they can be discarded if we are only interested in the latter.
+As is well known, every quantum mechanical system is governed fundamentally by its Hamiltonian. One could go so far as to say that if we would be able to exactly calculate all of the eigenvectors and eigenvalues of the Hamiltonian describing the material under study, the field of condensed matter would be completed. This is ofcourse impossible for reasons stated before.
+The full Hamiltonian can be decomposed into contributions from all parts of the system, and interactions between those parts.
+It is then quite straightforward to separate these into different energy scales, or through $\Ket{\psi(t)} = e^{-i \frac{\mathcal{H}t}{\hbar}}$, different characteristic timescales.
+There are then two alleys along which one can proceed to simplify the problem. When the interactions between these parts are neglectable, the two subsystems can be decoupled and solved separately. This is, for example, the case in materials for which the relativistic spin-orbit coupling can be ignored, decoupling completely the spin and charge sectors of the Hamiltonian.
+The second way is when the interaction is not negligible, but the time scales are so different that for the description of the slow varying subsystem, the interaction with the fast moving one can be described by an average, time independent one, such as e.g. in Random-Phase-Approximations \lp{citation!}. Vice versa, the slow moving subsystem can be taken as static for the description of the fast moving one. This is the well-known Born-Oppenheimer approximation that assumes the reaction of the electrons to displacements of the ions inside the material to be instantaneous.
 
-What this means fundamentally is that we are separating the full Hilbert space of possible states that the full wavefunction system can assume into separate parts that each take care of different aspects of the full physics. A relevant example is that the ionic response of a material can be described by phonons, these contribute very little to currents that may flow through it. Thus, while the full wavefunction and Hilbert space contains both the phonons and electrons, we can split it up into both parts, with an interaction between them. If this interaction is negligible, we can write the full wavefunction as the product of two parts in each of these spaces with no entanglement betwen them, and we can solve the physics of both parts separately.
+Applying approximations like these systematically, allows to identify and solve the important parts in order to describe many phenomena that present themselves in condensed matter.
+They form the backbone and starting point for further investigations gradually including more complexity to describe more complex physics.
 
-If this procedure is carried out systematically, at some point we end up with something that is actually solvable, which will hopefully describe the biggest part of the observed behavior. This is essentially how the field of condensed matter has progressed starting from the most fundamental quantum mechanical laws, first focusing on exactly solvable constituent problems, gradually adding complexity in order to describe more complex physics.
+This Thesis will discuss effects that depend crucially on the interactions between two relatively well-understood subsystems that can usually be neglected.
+The three main interactions that will be discussed are: relativistic spin-orbit coupling (SOC), coupling charge and spin sectors of the Hamiltonian; Heisenberg magnetic exchange striction, coupling spins to atomic displacements (phonons); and electrostriction, where electric polarization leads to an associated strain texture.
 
-In general, projects contained in this Thesis will focus on this step of taking two solved constituent problems, adding an interaction between them and observing what new physics emerge. There are three of these coupling interactions that will be discussed: spin-orbit coupling (SOC), exchange striction, and electrostriction.
-The focus will lie on electronic, magnetic and structural properties of ferroic crystals. In some of these materials, where multiple ferroic orders coexist (so-called multiferroics), the interactions will allow to influence either ferroic order by perturbing the other. 
+Aside from the fundamental interest, technological development has always been a strong driving force in condensed matter research. Here too the focus on interactions between subsystems can lead to beneficialdiscoveries, since it theoretically allows to influence one subsystem by applying a perturbation to the other.
+This can allow for more efficient or granular manipulation of, for example, magnetic order through applied currents or electric fields.
+Many success stories in this area led to leaps in technology, like the dramatic increase in density and efficiency of hard disks allowed for by the discovery of giant magnetoresistance.
+However, exactly due to the fact that in most cases these interactions can be neglected, it is often not easy to find materials where they are big enough to be exploited in technological applications.
+It is therefore crucial to gain an intimate understanding what underlying physics cause them, in order to then try and optimize them for the succesful use in devices.
+Here a selection of materials will be discussed in which the earlier mentioned interactions are larger, or behave in an unexpected fashion, in order to accomplish this deep understanding.
 
-The SOC is a relativistic effect, that can often be ignored if one is interested in the electronic structure inside a crystal with light ions. In the case of GeTe, however, an anomalously large spin-splitting of two normally degenerate spin states, was found in the bandstructure of the ferroelectric material.
-Another result of this interaction is a fundamental coupling between the crystalline lattice and magnetism if it is present.
-This causes the usually isotropic magnetic interactions between the on-site spins, given by the Heisenberg exchange Hamiltonian $\sum_{<i,j>} J_{ij}\mathbf{S}_i \cdot \mathbf{S}_j$, to become highly anisotropic, i.e. the coupling between the components of the spins depends on the direction of the bond: $\sum_{<i,j>, \mu,\nu} J^{\mu\nu}_{ij} S^\mu_i S^\nu_j$ where $\mu,\nu = x,y,z$. We will investigate Sr$_2$IrO$_4$ in particular, where there is a strong SOC on the magnetic Ir atoms. 
+As mentioned before, SOC is a relativistic effect, that can often be ignored if one is interested in the electronic structure inside a crystal with light ions.
+When materials with heavier constituent ions are investigated, it often becomes important to include this effect either perturbatively, or even on equal footing to other contributions in the Hamiltonian.
+While, through Kramer's degeneracy \lp{citation}, this does not lead to the appearance of spin-polarized Bloch functions when inversion symmetry is present, in GeTe this symmetry is broken, however, and a linear spin-splitting develops away from time-reversal symmetric points in the first Brillouin Zone (BZ).
+This spin-splitting is usually attributed to the Rashba-Bychkov effect, which is a purely relativistic effect that can be derived through a $\bm{k}\cdot \bm{p}$ expansion of the effective electronic Dirac equation\footnote{Integrating out positrons by performing the Fouldy-Wouthuysen transformation}.
+However, as will be demonstrated, another effect must lie at the origin in order to explain the properties of the observed spin-splitting.
+As further discussed in Chapter~\ref{ch:Rashba}, it is rather the combination of atomic SOC and the interaction of the orbital angular momentum of Bloch functions with the electric polarization, that causes the effect.
+From a technological standpoint, this large spin-splitting, which is dependent on the orientation of the electric polarization, can be used to not only generate spin-polarized currents, but also change sign of this spin-polarization by reversing the electric polarization using an external electric field.
+This can theoretically be exploited in a device first dreamt up by Datta and Das \lp{citation}, a spin based field effect transistor.
 
-The second effect we will highlight is magnetic exchange striction, which stems from the depence of exchange constants $J_{ij}$ on structural distortions, leading to a coupling between the spins and phonons. This leads to a modulation of the magnetic configuration when phonons are present in the material, and vice versa to the creation of phonons when the magnetic interaction can gain energy if bond lengths are varied. Here we will highlight two specific situations. In the first, a ferroelectric polarization (a $\bm{k} = \bm{0}$ phonon) emerges due to geometric frustration of anti-ferromagnetic ordering in GdMn$_2$O$_5$. The second situation is the well-known coupling between the spin density wave and charge density wave in elemental Chromium. In this case a peculiar nesting of the fermi-surfaces restuls in a spin density wave to be stabilized, whereupon the exchange striction creates a charge density wave.  
-It is this interaction that opens the path to a very precise control in ultrafast photoexcitation experiments of these collective modes, where the excitation of the spin density wave causes in turn an excitation in the charge density wave. The latter can then be controlled very precisely by further pulses, as is demonstrated in our work.
+In Chapter ~\ref{ch:CrSDW} the focus will be shifted to the aspect of increased granularity of control over a lattice vibration through exciting a coupled spin density wave (SDW) in elemental Chromium.
+In this case a peculiar nesting of the fermi-surfaces results in the stabilization of the SDW, which in turn will optimize bondlengths between antiferromagnetically coupled ions to maximize the gained magnetic exchange energy.
+In essence, this leads to a shortening of bonds between ions with large spins, and lengthening those between small spins. This lies at the origin of the period lattice displacement (PLD) which can be probed using X-ray spectroscopy.
+As will be shown, by exciting the electronic subsystem that constitutes the SDW, the phonon associated with the PLD will start to oscillate due to diminished size of the SDW.
+The SDW will then cool down partly restoring it, while the phonon oscillation largely remains present due to the slow dynamics and low damping.
+By applying a sequence of excitations to the SDW, one can then achieve indirect, but incredibly granular control over the amplitude of the phonon mode.
+Moreover, this process allows for achieving excitation amplitudes that would not be possible if the phonon mode would be excited directly.\lp{maybe this is not true?}
+This is thanks to the very fast (essentially instantaneous) dynamics of the SDW, and relatively strong coupling to the phonon mode with much slower dynamics.
+While the technological relevance of this process is not immediately obvious, it does highlight the capabilities that a coupling between two orders with different dynamics can offer in terms of control, to the point where a pulse train can be designed, using our model, such that the system follows a given envelope signal almost perfectly.
 
-Lastly, the interaction between strain and ferroelectricity will be carefully studied in 180$^\circ$ domain walls in BaTiO$_3$. This is one of the most well-known ferroelectric materials harboring a wide of ferroelectric phases, with very large polarization. Interestingly the coupling under discussion leads to a noticeable mechanical softening of 180$^\circ$ ferroelectric domain walls. This is not straight-forward as the domain wall is not ferroelastic, i.e. it separates two domains with the same values for the strain tensor, making it not a priori clear why the purely ferroelectric wall appears softer. We will show that the electrostriction leads to a strain profile close to the wall which can interact with an atomic force microscopy tip, bending the wall towards it and thus appearing softer. 
+Chapter ~\ref{ch:GdMn2O5} will continue with the discussion of a very peculiar example of a multiferroic material, namely, GdMn$_2$O$_5$, and, more specifically, the very peculiar angular dependence of the magnetoelectric switching cycle that was experimentally observed.
+In this material, the geometric frustration between chains of the antiferromagnetically coupled Mn ions,and associated inversion symmetry breaking magnetic ground state, leads to a ferroelectric polarization.This is again due to magnetic exchange striction that shortens bonds with favorable spin orientations, and vice versa.
+An additional contribution, from a similar origin, to the electric polarization is from the bonds between magnetic Gd and the neighboring Mn chains. This interaction is also frustrated, and due to the isotropical nature of the Gd spins, increases the total polarization significantly over other $R$Mn$_2$O$_5$ with $R$ another rare-earth.
+This is another prime example where one can influence one order through excitation of another.
+In this chapter it will be shown that applying a magnetic field switches the electric polarization, and that the switching behavior depends dramatically on the angle between the applied magnetic field and the crystalline $a$-axis.
+It turns out that three distinct switching regimes can be identified, with a never before observed four-state \footnote{Two low, and two high magnetic field states are cycled through.} hysteresis loop forming the boundary between two neighboring two-state \footnote{One low, and one high magnetic field state.} hysteresis loops. 
+This leads to the claim that this four-state loop is topologically protected (and distinct) in the sense that it will always exist as long as the two neighboring switching behaviors are present.
+As will be shown, the behavior can be described through the use of a relatively simple semi-classical spin model, with the four-state behavior being present for a surprisingly large set of model parameters.
+Furthermore, from this model, we show that in the two-state behaviors the internal spins toggle back-and-forth between two states, whereas in the four-state switching half the spins perform a full 360$^\circ$ rotation through two up and down sweeps of the external magnetic field.
+This is a microscopic analogue of the crankshaft in a car, converting the linear up and down motion of the magnetic field in a unidrectional motion of the spins.
+It will also be shown that the evolution of the energy landscape that lies at the origin of this behavior is very similar to that of a Thouless charge pump, more specifically to the one demonstrated in cold atom systems \lp{citation}. 
 
-Aside from the purely academic interest, these interactions between separate parts of the systems also hold promise from a technological point of view. Due to these cross-couplings between degrees of freedom, as was alluded to before, it is possible to influence one part by perturbing the other. The most brought up case is that of hard disks, where the ferromagnetic domains that store the data need to be reoriented by applying an external magnetic field, making it rather inefficient due to heating and limiting the data density caused by magnetic stray fields influencing multiple domains. If one would be able, however, to control the magnetic domains by applying an electric field, this would dramatically increase the efficiency. This is what makes multiferroics such as in our case GdMn$_2$O$_5$, are so interesting. The coupling between the ferroelectric polarization and magnetization in the material causes one to be able to change the latter by applying an electric field to the former. A thorough understanding of the switching behavior in this material is of paramount importance to utilize this effect efficiently.
-In the case of GeTe, as will discussed later, the spin polarization of the bands closest to the fermi level depend the direction of the ferroelectric polarization, thus theoretically allowing for a Datta Das transistor \lp{citation!}, allowing only a particular spin-polarized current to flow through the material.
+In the last chapter, the interaction between strain and ferroelectricity will be carefully studied in 180$^\circ$ domain walls in BaTiO$_3$.
+This is one of the most well-known ferroelectric materials harboring a wide variety of ferroelectric phases, with very a large polarization.
+Interestingly the coupling under discussion leads to a noticeable mechanical softening of 180$^\circ$, purely ferroelectric, domain walls.
+This is not straight-forward as the domain wall is not ferroelastic, i.e. it separates two domains with the same values for the strain tensor, making it not a priori clear why the purely ferroelectric wall appears softer.
+We will show that the electrostriction leads to a strain profile close to the wall which can interact with an atomic force microscopy tip, bending the wall towards it and thus appearing softer.
+This behavior allows to efficiently move ferroelectric domains (and domain walls) by applying a strain field through a tip, due to the presence of very soft sliding modes. 
 
-In the case of the ferroelectric domain walls, the cross-coupling between strain and ferroelectricity allows to effectively move the ferroelectric domains by applying a strain field through a tip, due to the presence of very soft sliding modes. 
-
-\lp{rundown of chapters here}
-
+% \lp{rundown of chapters here}
 
