--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -17,6 +17,7 @@
 \usepackage{fancyhdr}
 % \usepackage{natbib}
 \usepackage{hyperref}
+\addbibresource{./Introduction/bib.bib}
 \addbibresource{./GdMn2O5/bib.bib}
 \addbibresource{./Rashba/bib.bib}
 \addbibresource{./Softening/bib.bib}
