--- a/papers/Introduction/Introduction.tex
+++ b/papers/Introduction/Introduction.tex
@@ -4,60 +4,66 @@ The way to make progress with this undertaking has always been to try and isolat
 
 As is well known, every quantum mechanical system is governed fundamentally by its Hamiltonian. One could go so far as to say that if we would be able to exactly calculate all of the eigenvectors and eigenvalues of the Hamiltonian describing the material under study, the field of condensed matter would be completed. This is ofcourse impossible for reasons stated before.
 The full Hamiltonian can be decomposed into contributions from all parts of the system, and interactions between those parts.
-It is then quite straightforward to separate these into different energy scales, or through $\Ket{\psi(t)} = e^{-i \frac{\mathcal{H}t}{\hbar}}$, different characteristic timescales.
-There are then two alleys along which one can proceed to simplify the problem. When the interactions between these parts are neglectable, the two subsystems can be decoupled and solved separately. This is, for example, the case in materials for which the relativistic spin-orbit coupling can be ignored, decoupling completely the spin and charge sectors of the Hamiltonian.
-The second way is when the interaction is not negligible, but the time scales are so different that for the description of the slow varying subsystem, the interaction with the fast moving one can be described by an average, time independent one, such as e.g. in Random-Phase-Approximations \lp{citation!}. Vice versa, the slow moving subsystem can be taken as static for the description of the fast moving one. This is the well-known Born-Oppenheimer approximation that assumes the reaction of the electrons to displacements of the ions inside the material to be instantaneous.
+It is then quite straightforward to separate these into different energy scales, or through $\Ket{\psi(t)} = e^{-i \frac{\mathcal{H}t}{\hbar}}\Ket{\psi(0)}$, different characteristic timescales.
+There are two alleys along which one can proceed to simplify the problem. When the interactions between these parts are negligible, the two subsystems can be decoupled and solved separately.
+This is, for example, the case in materials for which the relativistic spin-orbit coupling can be ignored, decoupling completely the spin and charge sectors of the Hamiltonian.
+The second way is when the interaction is not negligible, but the time scales are so different that for the description of the slow varying subsystem, the interaction with the fast moving one can be described by an average, time independent one, so-called mean-field approximations.
+Vice versa, the slow moving subsystem can be taken as static for the description of the fast moving one.
+An example of this is the well-known Born-Oppenheimer approximation that assumes the reaction of the electrons to displacements of the ions inside the material to be instantaneous.
 
-Applying approximations like these systematically, allows to identify and solve the important parts in order to describe many phenomena that present themselves in condensed matter.
-They form the backbone and starting point for further investigations gradually including more complexity to describe more complex physics.
+Applying approximations like these systematically, allows to identify and approximately solve the important parts in order to describe many phenomena that present themselves in condensed matter.
+They form the backbone and starting point for further investigations gradually including more complexity to describe increasingly complex physics.
 
-This Thesis will discuss effects that depend crucially on the interactions between two relatively well-understood subsystems that can usually be neglected.
+This Thesis will discuss effects that depend crucially on these, usually negligible, interactions between two relatively well-understood subsystems.
 The three main interactions that will be discussed are: relativistic spin-orbit coupling (SOC), coupling charge and spin sectors of the Hamiltonian; Heisenberg magnetic exchange striction, coupling spins to atomic displacements (phonons); and electrostriction, where electric polarization leads to an associated strain texture.
 
-Aside from the fundamental interest, technological development has always been a strong driving force in condensed matter research. Here too the focus on interactions between subsystems can lead to beneficialdiscoveries, since it theoretically allows to influence one subsystem by applying a perturbation to the other.
+Aside from the fundamental interest, technological development has always been a strong driving force in condensed matter research. Here too, the focus on interactions between subsystems can lead to beneficial discoveries, since it theoretically allows to influence one subsystem by applying a perturbation to the other.
 This can allow for more efficient or granular manipulation of, for example, magnetic order through applied currents or electric fields.
-Many success stories in this area led to leaps in technology, like the dramatic increase in density and efficiency of hard disks allowed for by the discovery of giant magnetoresistance.
-However, exactly due to the fact that in most cases these interactions can be neglected, it is often not easy to find materials where they are big enough to be exploited in technological applications.
-It is therefore crucial to gain an intimate understanding what underlying physics cause them, in order to then try and optimize them for the succesful use in devices.
+Many success stories in this area led to leaps in technology, like the dramatic increase in density and efficiency of hard disks allowed for by the discovery of giant magnetoresistance \lp{citation}.
+However, exactly due to the fact that in most cases these interactions can be neglected, it is often not easy to find materials where they are big enough to be effictively exploited for technological applications.
+It is therefore crucial to gain an intimate understanding what physics are at the base of these effects, in order to then try and optimize them.
 Here a selection of materials will be discussed in which the earlier mentioned interactions are larger, or behave in an unexpected fashion, in order to accomplish this deep understanding.
 
-As mentioned before, SOC is a relativistic effect, that can often be ignored if one is interested in the electronic structure inside a crystal with light ions.
+As mentioned before, SOC is a relativistic effect that can often be ignored if one is interested in the electronic structure of a crystal with light ions.
 When materials with heavier constituent ions are investigated, it often becomes important to include this effect either perturbatively, or even on equal footing to other contributions in the Hamiltonian.
-While, through Kramer's degeneracy \lp{citation}, this does not lead to the appearance of spin-polarized Bloch functions when inversion symmetry is present, in GeTe this symmetry is broken, however, and a linear spin-splitting develops away from time-reversal symmetric points in the first Brillouin Zone (BZ).
+While, through the Kramers theorem \cite{Kramerstheorem}, this does not lead to the appearance of spin-polarized Bloch functions when inversion symmetry is present, in GeTe this symmetry is broken, however, and a linear spin-splitting develops away from time-reversal symmetric points in the first Brillouin Zone (BZ).
 This spin-splitting is usually attributed to the Rashba-Bychkov effect, which is a purely relativistic effect that can be derived through a $\bm{k}\cdot \bm{p}$ expansion of the effective electronic Dirac equation\footnote{Integrating out positrons by performing the Fouldy-Wouthuysen transformation}.
-However, as will be demonstrated, another effect must lie at the origin in order to explain the properties of the observed spin-splitting.
-As further discussed in Chapter~\ref{ch:Rashba}, it is rather the combination of atomic SOC and the interaction of the orbital angular momentum of Bloch functions with the electric polarization, that causes the effect.
+However, as will be demonstrated in Chapter~\ref{ch:Rashba}, another effect must lie at the origin in order to explain the properties of the observed spin-splitting.
+We will show that it is rather the combination of atomic SOC and the interaction of the orbital angular momentum of Bloch functions with the electric polarization, that causes the effect.
 From a technological standpoint, this large spin-splitting, which is dependent on the orientation of the electric polarization, can be used to not only generate spin-polarized currents, but also change sign of this spin-polarization by reversing the electric polarization using an external electric field.
-This can theoretically be exploited in a device first dreamt up by Datta and Das \lp{citation}, a spin based field effect transistor.
+This can theoretically be exploited in a device first dreamt up by Datta and Das \lp{Datta1990}, i.e. a spin based field-effect transistor.
 
-In Chapter ~\ref{ch:CrSDW} the focus will be shifted to the aspect of increased granularity of control over a lattice vibration through exciting a coupled spin density wave (SDW) in elemental Chromium.
-In this case a peculiar nesting of the fermi-surfaces results in the stabilization of the SDW, which in turn will optimize bondlengths between antiferromagnetically coupled ions to maximize the gained magnetic exchange energy.
+In Chapter ~\ref{ch:CrSDW} the focus will be shifted to the aspect of increased granularity of control over a lattice vibration through the excitation of a coupled spin density wave (SDW) in elemental Chromium.
+In this material a peculiar nesting of the fermi-surface results in the stabilization of the SDW, which in turn will optimize bondlengths between antiferromagnetically coupled ions to maximize the gained magnetic exchange energy.
 In essence, this leads to a shortening of bonds between ions with large spins, and lengthening those between small spins. This lies at the origin of the period lattice displacement (PLD) which can be probed using X-ray spectroscopy.
-As will be shown, by exciting the electronic subsystem that constitutes the SDW, the phonon associated with the PLD will start to oscillate due to diminished size of the SDW.
-The SDW will then cool down partly restoring it, while the phonon oscillation largely remains present due to the slow dynamics and low damping.
+As will be shown, by exciting the electronic subsystem that constitutes the SDW, the phonon associated with the PLD starts to oscillate due to diminished magnitude of the SDW.
+The electronic subsystem will then cool down partly restoring the SDW, while the phonon oscillation largely remains present due to the slow dynamics and low damping.
 By applying a sequence of excitations to the SDW, one can then achieve indirect, but incredibly granular control over the amplitude of the phonon mode.
 Moreover, this process allows for achieving excitation amplitudes that would not be possible if the phonon mode would be excited directly.\lp{maybe this is not true?}
-This is thanks to the very fast (essentially instantaneous) dynamics of the SDW, and relatively strong coupling to the phonon mode with much slower dynamics.
-While the technological relevance of this process is not immediately obvious, it does highlight the capabilities that a coupling between two orders with different dynamics can offer in terms of control, to the point where a pulse train can be designed, using our model, such that the system follows a given envelope signal almost perfectly.
+The very fast (essentially instantaneous) dynamics of the SDW, and relatively strong coupling to the phonon mode with much slower dynamics, lies at the core of this behavior.
+While the technological relevance of this process is not immediately obvious, it does highlight the capabilities that a coupling between two orders with different dynamics can offer in terms of control, to the point where a pulse train can be designed using our model, such that the PLD oscillation follows a given envelope signal almost perfectly.
 
-Chapter ~\ref{ch:GdMn2O5} will continue with the discussion of a very peculiar example of a multiferroic material, namely, GdMn$_2$O$_5$, and, more specifically, the very peculiar angular dependence of the magnetoelectric switching cycle that was experimentally observed.
-In this material, the geometric frustration between chains of the antiferromagnetically coupled Mn ions,and associated inversion symmetry breaking magnetic ground state, leads to a ferroelectric polarization.This is again due to magnetic exchange striction that shortens bonds with favorable spin orientations, and vice versa.
-An additional contribution, from a similar origin, to the electric polarization is from the bonds between magnetic Gd and the neighboring Mn chains. This interaction is also frustrated, and due to the isotropical nature of the Gd spins, increases the total polarization significantly over other $R$Mn$_2$O$_5$ with $R$ another rare-earth.
-This is another prime example where one can influence one order through excitation of another.
-In this chapter it will be shown that applying a magnetic field switches the electric polarization, and that the switching behavior depends dramatically on the angle between the applied magnetic field and the crystalline $a$-axis.
+Chapter ~\ref{ch:GdMn2O5} continues with the discussion of a very peculiar example of a multiferroic material, namely, GdMn$_2$O$_5$, and, more specifically, the very peculiar angular dependence of the magnetoelectric switching cycle that was experimentally observed.
+In this material, the geometric frustration between chains of the antiferromagnetically coupled Mn ions,and associated inversion symmetry breaking magnetic ground state, leads to a ferroelectric polarization. This is again due to magnetic exchange striction that shortens bonds with favorable spin orientations, and vice versa.
+An additional contribution to the electric polarization, from a similar origin, comes from the bonds between magnetic Gd and the neighboring Mn chains. This interaction is also frustrated, and due to the isotropic nature of the Gd spins, increases the total polarization significantly over other $R$Mn$_2$O$_5$ with $R$ another rare-earth.
+This is another prime example where one can influence one order through excitation of another, allowing to switch the ferroelectric polarization by the application of an external magnetic field.
+In this chapter it will be shown that the switching behavior depends dramatically on the angle between the applied magnetic field and the crystalline $a$-axis.
 It turns out that three distinct switching regimes can be identified, with a never before observed four-state \footnote{Two low, and two high magnetic field states are cycled through.} hysteresis loop forming the boundary between two neighboring two-state \footnote{One low, and one high magnetic field state.} hysteresis loops. 
-This leads to the claim that this four-state loop is topologically protected (and distinct) in the sense that it will always exist as long as the two neighboring switching behaviors are present.
+This leads to the claim that this four-state loop is topologically protected (and distinct) in the sense that it will always exist as long as the two neighboring switching behaviors are present in a material.
 As will be shown, the behavior can be described through the use of a relatively simple semi-classical spin model, with the four-state behavior being present for a surprisingly large set of model parameters.
-Furthermore, from this model, we show that in the two-state behaviors the internal spins toggle back-and-forth between two states, whereas in the four-state switching half the spins perform a full 360$^\circ$ rotation through two up and down sweeps of the external magnetic field.
-This is a microscopic analogue of the crankshaft in a car, converting the linear up and down motion of the magnetic field in a unidrectional motion of the spins.
-It will also be shown that the evolution of the energy landscape that lies at the origin of this behavior is very similar to that of a Thouless charge pump, more specifically to the one demonstrated in cold atom systems \lp{citation}. 
+Furthermore, from this model, we show that in the two-state behaviors the internal spins simply toggle back-and-forth between two states, whereas in the four-state switching half the spins perform a full 360$^\circ$ rotation through two up and down sweeps of the external magnetic field.
+This is a microscopic analogue of the crankshaft in a car, converting the linear up and down motion of the magnetic field (the pistons) into a unidrectional motion of the spins (the driveshaft).
+It will also be shown that the evolution of the energy landscape that lies at the origin of this behavior is very similar to that of a Thouless charge pump, more specifically to the one demonstrated in cold atom systems \cite{Lohse16}. 
 
 In the last chapter, the interaction between strain and ferroelectricity will be carefully studied in 180$^\circ$ domain walls in BaTiO$_3$.
-This is one of the most well-known ferroelectric materials harboring a wide variety of ferroelectric phases, with very a large polarization.
-Interestingly the coupling under discussion leads to a noticeable mechanical softening of 180$^\circ$, purely ferroelectric, domain walls.
-This is not straight-forward as the domain wall is not ferroelastic, i.e. it separates two domains with the same values for the strain tensor, making it not a priori clear why the purely ferroelectric wall appears softer.
-We will show that the electrostriction leads to a strain profile close to the wall which can interact with an atomic force microscopy tip, bending the wall towards it and thus appearing softer.
-This behavior allows to efficiently move ferroelectric domains (and domain walls) by applying a strain field through a tip, due to the presence of very soft sliding modes. 
+As will be shown, while the domain wall is purely ferroelectric, i.e. it separates two domains with the same strain texture, it still appears mechanically softer under an applied force by a tip.
+It is not a priori clear why this occurs, since the wall is not ferroelastic.
+In ferroelastic domain walls one domain will be favored over another by the force applied through the tip, meaning that when it is applied to the wall, the tip will excite a very soft sliding domain wall mode.
+This mode is not present in either of the ferroelastic domains and thus the ferroelastic domain wall will appear softer.
+In our case, however, we show that also in purely ferroelectric domain walls, the interaction between the polarization and strain leads to the presence of a long range strain profile close to the wall.
+An atomic force microscopy tip applied to either side of the wall will interact with this strain profile, bending the wall towards it through the excitation of a similar sliding mode, which in turn makes it appear softer.
+This behavior allows to efficiently move ferroelectric domains (and domain walls) by applying a strain field through a tip.
+Seen as certain ferroelectric domain walls are conductive, this opens the door to manipulate conducting channels through the application of strain, something that could be used in electronic devices.
 
 % \lp{rundown of chapters here}
 
