work on Wannierfunctions

--- a/papers/Introduction/bib.bib
+++ b/papers/Introduction/bib.bib
@@ -5,3 +5,23 @@
       doi = "10.1093/oi/authority.20110803100043434",
       url = "https://www.oxfordreference.com/view/10.1093/oi/authority.20110803100043434"
 }
+@article{Wannier1937,
+abstract = {In this article, a method is devised to study the energy spectrum for an excited electron con- figuration in an ideal crystal. The con6guration studied consists of a single excited electron taken out of a full band of N electrons. The multiplicity of the state is N'. It is shown that because of the Coulomb attraction between the electron and its hole states are split off from the bottom of the excited Bloch band; for these states the electron cannot escape its hole ¹" completely. The analogy of these levels to the spectrum of an atom or molecule is worked out quantitatively. The bottom of the 8loch band appears as "ionization potential" and the Bloch band itself as the continuum above this threshold energy.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {Wannier, Gregory H.},
+doi = {10.1103/PhysRev.52.191},
+eprint = {arXiv:1011.1669v3},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wannier - 1937 - The structure of electronic excitation levels in insulating crystals.pdf:pdf},
+isbn = {0031-899X$\backslash$r1536-6065},
+issn = {0031899X},
+journal = {Physical Review},
+mendeley-groups = {General Physics/Wannier Functions},
+number = {3},
+pages = {191--197},
+pmid = {25246403},
+title = {{The structure of electronic excitation levels in insulating crystals}},
+volume = {52},
+year = {1937}
+}
+
