--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -29,7 +29,8 @@
 
 %To be used within math env
 \newcommand{\Ket}[1]{\left|#1\right\rangle}
-\newcommand{\Bra}[1]{\langle #1\rvert}
+\newcommand{\Bra}[1]{\left\langle #1\right\rvert}
+\newcommand{\BraKet}[1]{\left\langle #1\rvert #1\right\rangle}
 
 \newcommand{\kpoint}{$\bold{K}$ }
 \newcommand{\Kpoint}{$\bold{K'}$ }
